# ooai-persistence

./: .env.example  .gitignore  .readthedocs.yaml  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: conf.py  index.md
docs/api/: ooai_persistence.bootstrap.rst  ooai_persistence.cli.rst  ooai_persistence.context.rst  ooai_persistence.graphs.rst  ooai_persistence.providers.cache.rst  ooai_persistence.providers.checkpointer.rst  ooai_persistence.providers.rst  ooai_persistence.providers.store.rst  ooai_persistence.registry.rst  ooai_persistence.resources.rst  ooai_persistence.rst  ooai_persistence.serde.builders.rst  ooai_persistence.serde.registry.rst  ooai_persistence.serde.rst  ooai_persistence.settings.rst  ooai_persistence.smoke.rst  ooai_persistence.types.rst
examples/: basic_async.py  basic_sync.py
infra/: README.md  compose.yaml
scripts/: docker_ready.py
src/ooai_persistence/: __init__.py  bootstrap.py  cli.py  context.py  graphs.py  registry.py  resources.py  settings.py  smoke.py  types.py
src/ooai_persistence/providers/: __init__.py  cache.py  checkpointer.py  store.py
src/ooai_persistence/serde/: __init__.py  builders.py  registry.py
tests/e2e/: test_cli.py  test_memory_bundle.py  test_postgres_bundle.py  test_sqlite_bundle.py
tests/integration/: test_async_context.py  test_graphs.py
tests/unit/: test_bootstrap.py  test_cli_commands.py  test_context.py  test_provider_builders.py  test_registry.py  test_resources.py  test_serde_registry.py  test_settings.py
